manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-basic
  labels:
    name: ingress-basic
