manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beam-service
spec:
  selector:
    app: beam
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
