manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beam-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: 'beam.blakeas.tk'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beam-service
            port:
              number: 80
